Apr 22, 2012 - chris ---------------------------------------------------
o The legacy database format of hamsterdb 1.0.9 and older is no longer
    supported

Apr 21, 2012 - chris ---------------------------------------------------
o Fixed a bug in recovery; recovery is now more robust, and there are more
    fsync's if HAM_WRITE_THROUGH is enabled

Apr 25, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.2

Apr 24, 2012 - chris ---------------------------------------------------
o Fixed a buffer overrun in the freelist

Apr 14, 2012 - chris ---------------------------------------------------
o hamsterdb is now thread safe. The boost c++ library is now required for
    building

Mar 14, 2012 - chris ---------------------------------------------------
o enabled approx matching for ham_cursor_find

Mar 11, 2012 - chris ---------------------------------------------------
o hamsterdb is now thread-safe
o When using Transactions, the key->data and record->data pointers
	will point into memory managed by the Transaction, not by the
	Database

Feb 18, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.1

Feb 15, 2012 - chris ---------------------------------------------------
o ham_find() now supports approximate matching w/ transactions enabled

Feb 07, 2012 - chris ---------------------------------------------------
o fixed bug where HAM_ONLY_DUPLICATES was ignored when used in a
	Transaction (thanks, Mark Ruijter from lessfs)

Feb 06, 2012 - chris ---------------------------------------------------
o added a public macro HAM_API_REVISION to allow users to programmatically
    distinguish between new and old interface of ham_txn_begin
o win32: fixed build issue if HAM_DISABLE_COMPRESSION is defined (thanks,
    Andy Thalmann (http://www.softdev.ch))

Feb 05, 2012 - chris ---------------------------------------------------